--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -38,4 +38,8 @@ app:
     requireActivation: # Indicates whether or not, new user need activation before being used
   notifications:
     smtp: smtp.ebi.ac.uk
-    submissionNotification: # Indicates whether or not the user should be notified by email after a submission
+    rt:
+      host: # RT server host
+      queue: # Queue used for RT notifications
+      user: # RT user
+      password: # RT password
