Pivotal ID # 138327043: Email User Successful Submission
Code review changes

--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -27,3 +27,8 @@ app:
     requireActivation: false
   notifications:
     smtp: smtp.ebi.ac.uk
+    rt:
+      host: # RT server host
+      queue: # Queue used for RT notifications
+      user: # RT user
+      password: # RT password
