--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -28,7 +28,7 @@ app:
   notifications:
     smtp: smtp.ebi.ac.uk
     rt:
-      host: # RT server host
-      queue: # Queue used for RT notifications
-      user: # RT user
-      password: # RT password
+      host: # RT server host. Not required for local environment
+      queue: # Queue used for RT notifications. Not required for local environment
+      user: # RT user. Not required for local environment
+      password: # RT password. Not required for local environment
