Pivotal ID # 138327043: Email User Successful Submission (#186)
- Changes to notify the user once the submission has been processed
- Create the corresponding events and templates
- Create a client in order to interact with the RT system

--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -27,3 +27,8 @@ app:
     requireActivation: false
   notifications:
     smtp: smtp.ebi.ac.uk
+    rt:
+      host: # RT server host. Not required for local environment
+      queue: # Queue used for RT notifications. Not required for local environment
+      user: # RT user. Not required for local environment
+      password: # RT password. Not required for local environment
