--- a/ci/submitter.yml
+++ b/ci/submitter.yml
@@ -19,12 +19,12 @@ deploy-beta-submitter:
   stage: deploy-beta-submitter
   when: manual
   dependencies:
-    - build-submitter
+    - build-test
   script: gradle deploySubmitter -Penv=beta -PdeployPath=/nfs/biostudies/.adm/apps/submitter/beta -PjvmParams=-Xmx2g
 
 deploy-prod-submitter:
   stage: deploy-prod-submitter
   when: manual
   dependencies:
-    - build-submitter
+    - build-test
   script: gradle deploySubmitter -Penv=prod -PdeployPath=/nfs/biostudies/.adm/apps/submitter/prod -PjvmParams=-Xmx2g
