--- a/ci/pmc-processor.yml
+++ b/ci/pmc-processor.yml
@@ -9,12 +9,12 @@ deploy-beta-pmc-processor-task:
   stage: deploy-beta-pmc
   when: manual
   dependencies:
-    - build-pmc-processor-task
+    - build-test
   script: gradle updatePmcArtifact -Penv=beta -PdeployPath=/nfs/biostudies/.adm/apps/scheduler/beta/apps
 
 deploy-prod-pmc-processor-task:
   stage: deploy-prod-pmc
   when: manual
   dependencies:
-    - build-pmc-processor-task
+    - build-test
   script: gradle updatePmcArtifact -Penv=prod -PdeployPath=/nfs/biostudies/.adm/apps/scheduler/prod/apps
