Pivotal ID # 172534817: Repository Branch Per Environment
Auto deploy for dev environment

--- a/ci/submitter.yml
+++ b/ci/submitter.yml
@@ -8,7 +8,7 @@ auto-deploy-dev-submitter:
   stage: auto-deploy-dev-submitter
   only:
     refs:
-      - master
+      - dev
 
 deploy-dev-submitter:
   extends: .deploy-dev-submitter
