Pivotal ID # 169759546: Number of views metadata for each accession
Endpoint to register submission stats

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,7 @@ include("submission:submission-webapp")
 include("submission:submission-security")
 include("submission:persistence")
 include("submission:notifications")
+include("submission:stats")
 
 include("scheduler:cluster-client")
 include("scheduler:pmc-processor-task")
