Pivotal ID # 172620298: Submission Notification URL
Generate the submission URL according to the current environment

--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -27,6 +27,7 @@ app:
     requireActivation: false
   notifications:
     smtp: smtp.ebi.ac.uk
+    uiUrl: # The BioStudies UI url
     rt:
       host: # RT server host. Not required for local environment
       queue: # Queue used for RT notifications. Not required for local environment
