--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -38,6 +38,7 @@ app:
     requireActivation: # Indicates whether or not, new user need activation before being used
   notifications:
     smtp: smtp.ebi.ac.uk
+    uiUrl: # The BioStudies UI url
     rt:
       host: # RT server host
       queue: # Queue used for RT notifications
