--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include("commons:commons-bio")
 include("commons:commons-http")
 include("commons:commons-serialization")
 include("commons:commons-model-extended")
+include("commons:commons-model-extended-serialization")
 include("commons:commons-test")
 include("commons:commons-transpiler")
 
@@ -24,4 +25,6 @@ include("scheduler:pmc-processor-task")
 include("scheduler:scheduler")
 include("scheduler:task-properties")
 include("bio-admin")
+
+
 
