--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include("commons:commons-http")
 include("commons:commons-serialization")
 include("commons:commons-model-extended")
 include("commons:commons-model-extended-mapping")
+include("commons:commons-model-extended-serialization")
 include("commons:commons-test")
 include("commons:commons-transpiler")
 
