Pivotal ID # 172476764: Refresh Interdatabase Support
- Move serialization extensions to a separated module
- Use the new module in the commons serialization module

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include("commons:commons-util")
 include("commons:commons-bio")
 include("commons:commons-http")
 include("commons:commons-serialization")
+include("commons:commons-serialization-util")
 include("commons:commons-model-extended")
 include("commons:commons-model-extended-mapping")
 include("commons:commons-model-extended-serialization")
