--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -31,7 +31,7 @@ logging:
 app:
   basepath: # Absolute path to the folder to be used as storage
   tempDirPath: # Absolute of the temp folder to store files
-  instanceBaseUrl: http://biostudy-bia.ebi.ac.uk:8788
+  instanceBaseUrl: # Instance base url e.g. http://server.ebi.ac.uk:5541
   security:
     captchaKey: # Captcha validation token
     checkCaptcha: false
