added ftp handler

--- a/submission/submission-handlers/src/main/resources/application.yml
+++ b/submission/submission-handlers/src/main/resources/application.yml
@@ -3,3 +3,7 @@ spring:
     host: biostudy-dev-mq.ebi.ac.uk
     password: manager
     username: manager
+
+app:
+  ftp-folder: ""
+  submission-folder: ""
