--- a/ci/submission-handlers.yml
+++ b/ci/submission-handlers.yml
@@ -10,15 +10,15 @@ auto-deploy-dev-handlers:
     refs:
       - dev
 
-deploy-beta-scheduler:
-  stage: auto-deploy-beta-handlers
+deploy-beta-handlers:
+  stage: deploy-beta-handlers
   when: manual
   dependencies:
     - build-test
   script: gradle deployHandlers -Penv=beta -PdeployPath=/nfs/biostudies/.adm/apps/handlers/beta
 
-deploy-prod-scheduler:
-  stage: auto-deploy-prod-handlers
+deploy-prod-handlers:
+  stage: deploy-prod-handlers
   when: manual
   dependencies:
     - build-test
