--- a/settings.gradle
+++ b/settings.gradle
@@ -5,11 +5,12 @@ include("commons:commons-bio")
 include("commons:commons-http")
 include("commons:commons-serialization")
 include("commons:commons-serialization-util")
+include("commons:commons-test")
+include("commons:commons-transpiler")
+
 include("commons:commons-model-extended")
 include("commons:commons-model-extended-mapping")
 include("commons:commons-model-extended-serialization")
-include("commons:commons-test")
-include("commons:commons-transpiler")
 
 include("client:bio-webclient")
 include("client:bio-commandline")
@@ -22,6 +23,7 @@ include("submission:submission-security")
 include("submission:persistence")
 include("submission:notifications")
 include("submission:stats")
+include("submission:submission-handlers")
 
 include("scheduler:cluster-client")
 include("scheduler:pmc-processor-task")
