--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,11 +5,13 @@ include:
   - local: '/ci/scheduler.yml'
   - local: '/ci/bio-admin.yml'
   - local: '/ci/bio-commandline.yml'
+  - local: '/ci/submission-handlers.yml'
 
 stages:
   - build-test
   - build-artifact
   - auto-deploy-dev-submitter
+  - auto-deploy-dev-handlers
   - deploy-dev-submitter
   - deploy-beta-submitter
   - deploy-prod-submitter
@@ -21,6 +23,9 @@ stages:
   - deploy-prod-scheduler
   - deploy-bio-admin
   - deploy-bio-commandline
+  - deploy-dev-handlers
+  - deploy-beta-handlers
+  - deploy-prod-handlers
 
 build-test:
   stage: build-test
@@ -32,3 +37,4 @@ build-test:
       - scheduler/scheduler/build/libs/scheduler-1.0.0.jar
       - scheduler/pmc-processor-task/build/libs/pmc-processor-task-1.0.0.jar
       - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
+      - submission/submission-handlers/build/libs/submission-handlers-1.0.0.jar
