added magic folder

--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -26,6 +26,7 @@ app:
     tokenHash: biostd-test
     environment: TEST
     filesDirPath:
+    magicDirPath:
     requireActivation: false
   notifications:
     smtp:
