--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -45,6 +45,7 @@ app:
     checkCaptcha: false
     tokenHash: # Token used for hash authentication
     filesDirPath: # Absolute path to the folder to be used for the user/groups files
+    magicDirPath: #  Absolute path to create user magic folder for dropbox simple access
     environment: # Current application execution environment
     requireActivation: # Indicates whether or not, new user need activation before being used
   notifications:
