--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -38,7 +38,7 @@ app:
     requireActivation: false
   notifications:
     smtp: smtp.ebi.ac.uk
-    uiUrl: # The BioStudies UI url
+    uiUrl: # The BioStudies UI url. Not required for local environment
     rt:
       host: # RT server host. Not required for local environment
       queue: # Queue used for RT notifications. Not required for local environment
