--- a/ci/submission-handlers.yml
+++ b/ci/submission-handlers.yml
@@ -10,6 +10,13 @@ auto-deploy-dev-handlers:
     refs:
       - dev
 
+deploy-dev-handlers:
+  stage: deploy-dev-handlers
+  when: manual
+  dependencies:
+    - build-test
+  script: gradle deployHandlers -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/handlers/dev
+
 deploy-beta-handlers:
   stage: deploy-beta-handlers
   when: manual
