--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,8 @@ include("commons:commons-model-extended-serialization")
 include("client:bio-webclient")
 include("client:bio-commandline")
 
+include("events:events-publisher")
+
 include("infrastructure")
 
 include("submission:submitter")
