--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ include("commons:commons-model-extended-serialization")
 
 include("client:bio-webclient")
 include("client:bio-commandline")
+include("client:fire-webclient")
 
 include("events:events-publisher")
 
