Pivotal ID # 173817309: FIRE Client
Add testing

--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -22,6 +22,10 @@ app:
   ftpPath:
   tempDirPath:
   instanceBaseUrl: http://localhost:8080
+  fire:
+    host:
+    username:
+    password:
   security:
     tokenHash: biostd-test
     environment: TEST
