Pivotal ID # 172671360: Warn Users About Upcoming Public Release
Create the daily scheduled job for the submission releaser

--- a/scheduler/releaser/src/main/resources/application.yml
+++ b/scheduler/releaser/src/main/resources/application.yml
@@ -6,9 +6,11 @@ spring:
     port: # RabbitMQ Port
 
 app:
-  bioStudiesUrl: # BioStudies backend URL
-  bioStudiesUser: # BioStudies manager user
-  bioStudiesPassword: # BioStudies manager password
+  bioStudies:
+    url: # BioStudies backend URL
+    user: # BioStudies manager user
+    password: # BioStudies manager password
+
   notification-times:
     first-warning: # Number of days before hand for the first warning to the users about upcoming release
     second-warning: # Number of days before hand for the second warning to the users about upcoming release
