Pivotal ID # 172671360: Warn Users About Upcoming Public Release
- Improve the releaser task module name
- Create a resource to be able to trigger the releaser manually
- General code improvements

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,9 @@ stages:
   - deploy-dev-pmc
   - deploy-beta-pmc
   - deploy-prod-pmc
+  - deploy-dev-releaser-task
+  - deploy-beta-releaser-task
+  - deploy-prod-releaser-task
   - deploy-dev-scheduler
   - deploy-beta-scheduler
   - deploy-prod-scheduler
@@ -36,5 +39,6 @@ build-test:
       - client/bio-commandline/build/libs/PTSubmit-2.0.jar
       - scheduler/scheduler/build/libs/scheduler-1.0.0.jar
       - scheduler/pmc-processor-task/build/libs/pmc-processor-task-1.0.0.jar
+      - scheduler/submission-releaser-task/build/libs/submission-releaser-task-1.0.0.jar
       - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
       - submission/submission-handlers/build/libs/submission-handlers-1.0.0.jar
