--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: gradle:6.5.1-jdk8
 include:
   - local: '/ci/submitter.yml'
   - local: '/ci/pmc-processor.yml'
+  - local: '/ci/submission-releaser.yml'
   - local: '/ci/scheduler.yml'
   - local: '/ci/bio-admin.yml'
   - local: '/ci/bio-commandline.yml'
