Pivotal ID # 172671360: Warn Users About Upcoming Public Release
Fix build

--- a/scheduler/scheduler/src/main/resources/application.yml
+++ b/scheduler/scheduler/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 app:
   apps-folder: # Folder where app jar can be located
+  notificationsUrl: # Slack notifications URL
 
   ssh:
     user: # ssh user
