--- a/scheduler/submission-releaser-task/src/main/resources/application.yml
+++ b/scheduler/submission-releaser-task/src/main/resources/application.yml
@@ -6,12 +6,13 @@ spring:
     port: # RabbitMQ Port
 
 app:
+  mode: # Releaser mode: RELEASE, NOTIFY
   bioStudies:
     url: # BioStudies backend URL
     user: # BioStudies manager user
     password: # BioStudies manager password
 
   notification-times:
-    first-warning: # Number of days before hand for the first warning to the users about upcoming release
-    second-warning: # Number of days before hand for the second warning to the users about upcoming release
-    third-warning: # Number of days before hand for the third warning to the users about upcoming release
+    first-warning-days: # Number of days before hand for the first warning to the users about upcoming release
+    second-warning-days: # Number of days before hand for the second warning to the users about upcoming release
+    third-warning-days: # Number of days before hand for the third warning to the users about upcoming release
