--- a/submission/submission-handlers/src/main/resources/application.yml
+++ b/submission/submission-handlers/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://mysql-fg-biostudy-dev.ebi.ac.uk:4639/biostd_dev
-    username: biostd_dev
-    password: biostd_dev
+    url: # Database connection URL
+    username:
+    password:
     driver-class-name: com.mysql.jdbc.Driver
 
   jpa:
@@ -13,17 +13,16 @@ spring:
       use-new-id-generator-mappings: false
 
   rabbitmq:
-    host: biostudy-dev-mq.ebi.ac.uk
-    port: 5673
-    username: manager
-    password: manager-dev
+    host: # RabbitMQ host
+    username: # RabbitMQ user
+    password: # RabbitMQ password
 
 app:
   notifications:
     smtp: smtp.ebi.ac.uk
-    uiUrl: http://ribs.ebi.ac.uk:8080/biostudies
+    uiUrl: # The BioStudies UI url
     rt:
-      host: https://testdesk.ebi.ac.uk
-      queue: biostudies-testdesk
-      user: biostudies-api
-      password: biostudiestestpassword!2
+      host: # RT server host
+      queue: # Queue used for RT notifications
+      user: # RT user
+      password: # RT password
