--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: gradle:6.5.1-jdk8
 include:
   - local: '/ci/submitter.yml'
   - local: '/ci/pmc-processor.yml'
+  - local: '/ci/submission-releaser.yml'
   - local: '/ci/scheduler.yml'
   - local: '/ci/bio-admin.yml'
   - local: '/ci/bio-commandline.yml'
@@ -18,6 +19,9 @@ stages:
   - deploy-dev-pmc
   - deploy-beta-pmc
   - deploy-prod-pmc
+  - deploy-dev-releaser-task
+  - deploy-beta-releaser-task
+  - deploy-prod-releaser-task
   - deploy-dev-scheduler
   - deploy-beta-scheduler
   - deploy-prod-scheduler
@@ -36,5 +40,6 @@ build-test:
       - client/bio-commandline/build/libs/PTSubmit-2.0.jar
       - scheduler/scheduler/build/libs/scheduler-1.0.0.jar
       - scheduler/pmc-processor-task/build/libs/pmc-processor-task-1.0.0.jar
+      - scheduler/submission-releaser-task/build/libs/submission-releaser-task-1.0.0.jar
       - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
       - submission/submission-handlers/build/libs/submission-handlers-1.0.0.jar
