--- a/settings.gradle
+++ b/settings.gradle
@@ -34,6 +34,6 @@ include("submission:persistence-sql")
 
 include("scheduler:cluster-client")
 include("scheduler:pmc-processor-task")
+include("scheduler:submission-releaser-task")
 include("scheduler:scheduler")
 include("scheduler:task-properties")
-
