Pivotal ID # 175163839: Stats Refactor
- Create interface and SQL implementation for submission stats
- Refactor the current code to use the new implementation
- Add auto deployment in DEV environment for the master branch

--- a/ci/submission-handlers.yml
+++ b/ci/submission-handlers.yml
@@ -8,7 +8,7 @@ auto-deploy-dev-handlers:
   stage: auto-deploy-dev-handlers
   only:
     refs:
-      - dev
+      - master
 
 deploy-dev-handlers:
   stage: deploy-dev-handlers
