--- a/ci/submitter.yml
+++ b/ci/submitter.yml
@@ -8,7 +8,7 @@ auto-deploy-dev-submitter:
   stage: auto-deploy-dev-submitter
   only:
     refs:
-      - dev
+      - master
 
 deploy-dev-submitter:
   extends: .deploy-dev-submitter
