--- a/settings.gradle
+++ b/settings.gradle
@@ -36,3 +36,4 @@ include("scheduler:pmc-processor-task")
 include("scheduler:submission-releaser-task")
 include("scheduler:scheduler")
 include("scheduler:task-properties")
+include("submission:persistence-mongo")
