Pivotal #ID:175163839: Submission Query Operations In Mongo (#319)
* added mongo support

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -55,3 +55,6 @@ app:
   notifications:
     smtp: smtp.ebi.ac.uk
     uiUrl: # The BioStudies UI url
+  persistence:
+    enabledMongo: false
+    connection: # Mongo database connection string
